--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,17 @@
     "require": {
         "php": "^7.1.3",
         "sensio/framework-extra-bundle": "^5.0",
+        "symfony/asset": "^4.0@RC",
         "symfony/console": "^4.0",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0@RC",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0@RC",
         "symfony/security-csrf": "^4.0@RC",
+        "symfony/twig-bridge": "^4.0@RC",
         "symfony/twig-bundle": "^4.0@RC",
         "symfony/web-server-bundle": "^4.0@RC",
         "symfony/yaml": "^4.0",
