--- a/.env.dist
+++ b/.env.dist
@@ -14,3 +14,10 @@ APP_SECRET=41f3f165a0085cfe9422df4a5810e282
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?charset=utf8mb4&serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
