--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,5 @@
 swiftmailer:
     url: '%env(MAILER_URL)%'
+    username: noreply@adriendesmet.com
+    password: THynn*?1]H?{
     spool: { type: 'memory' }
