--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bridge": "^4.0@RC",
         "symfony/twig-bundle": "^4.0@RC",
+        "symfony/validator": "^4.0@RC",
         "symfony/var-dumper": "^4.0@RC",
         "symfony/web-server-bundle": "^4.0@RC",
         "symfony/yaml": "^4.0",
