--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "symfony/console": "^4.0",
         "symfony/debug-bundle": "^4.0@RC",
         "symfony/debug-pack": "^1.0",
+        "symfony/expression-language": "^4.0@RC",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0@RC",
         "symfony/framework-bundle": "^4.0",
