Finalisation du dashboard admin
- Mise en place de la page des contacts utiles

--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,27 @@
 {
     "type": "project",
     "license": "proprietary",
-    "minimum-stability": "RC",
     "require": {
         "php": "^7.1.3",
         "sensio/framework-extra-bundle": "^5.0",
-        "symfony/asset": "^4.0@RC",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
-        "symfony/debug-bundle": "^4.0@RC",
+        "symfony/debug-bundle": "^4.0",
         "symfony/debug-pack": "^1.0",
-        "symfony/expression-language": "^4.0@RC",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
-        "symfony/form": "^4.0@RC",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
-        "symfony/security-bundle": "^4.0@RC",
-        "symfony/security-csrf": "^4.0@RC",
+        "symfony/security-bundle": "^4.0",
+        "symfony/security-csrf": "^4.0",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bridge": "^4.0@RC",
-        "symfony/twig-bundle": "^4.0@RC",
-        "symfony/validator": "^4.0@RC",
-        "symfony/var-dumper": "^4.0@RC",
-        "symfony/web-server-bundle": "^4.0@RC",
+        "symfony/twig-bridge": "^4.0",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
+        "symfony/var-dumper": "^4.0",
+        "symfony/web-server-bundle": "^4.0",
         "symfony/yaml": "^4.0",
         "twig/extensions": "^1.5"
     },
